fix: metrics response
