# api/ddd/entity/metrics.go
@@ -2,12 +2,14 @@ package entity
 
 import (
 	"context"
+	"fmt"
 	"github.com/prometheus/common/model"
+	"github.com/sirupsen/logrus"
 	_interface "github.com/xiaoxlm/monitor-gateway/pkg/metrics/interface"
 )
 
 // MetricsQuery represents a domain object for metrics queries
-type MetricsQuery struct {
+type metricsQuery struct {
 	Query string
 	Start int64
 	End   int64
@@ -16,16 +18,16 @@ type MetricsQuery struct {
 
 // Metrics is the aggregate root entity for metrics data
 type Metrics struct {
-	queries      []MetricsQuery
+	queries      []metricsQuery
 	timeSeriesDB _interface.TimeSeriesDB
 	values       []model.Value
 }
 
 // NewMetrics creates a new Metrics aggregate
 func NewMetrics(queries []_interface.QueryFormItem, tsDB _interface.TimeSeriesDB) *Metrics {
-	metricQueries := make([]MetricsQuery, len(queries))
+	metricQueries := make([]metricsQuery, len(queries))
 	for i, q := range queries {
-		metricQueries[i] = MetricsQuery{
+		metricQueries[i] = metricsQuery{
 			Query: q.Query,
 			Start: q.Start,
 			End:   q.End,
@@ -62,6 +64,44 @@ func (m *Metrics) FetchMetrics(ctx context.Context) error {
 }
 
 // GetValues returns the fetched metrics values
-func (m *Metrics) GetValues() ([]model.Value, error) {
-	return m.values, nil
+func (m *Metrics) GetValues() ([]MetricsFormedData, error) {
+	var ret []MetricsFormedData
+	for _, result := range m.values {
+		switch result.Type() {
+		case model.ValScalar:
+			logrus.Warnf("need to parse 'Scalar' type value")
+		case model.ValVector:
+			logrus.Warnf("need to parse 'Vector' type value")
+		case model.ValMatrix:
+			var values []Values
+			matrix := result.(model.Matrix)
+			for _, stream := range matrix {
+				for _, value := range stream.Values {
+					values = append(values, Values{
+						Value:     value.Value.String(),
+						Timestamp: value.Timestamp.Unix(),
+					})
+				}
+			}
+
+			ret = append(ret, MetricsFormedData{
+				Values: values,
+			})
+		case model.ValString:
+			logrus.Warnf("need to parse 'String' type value")
+		default:
+			return nil, fmt.Errorf("unknown metric type: %s", result.Type())
+		}
+	}
+
+	return ret, nil
+}
+
+type MetricsFormedData struct {
+	Values []Values
+}
+
+type Values struct {
+	Value     string
+	Timestamp int64
 }
